ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Critical - P2
    • 2.8.0-rc1
    • Affects Version/s: 2.8.0-rc0
    • Component/s: Storage
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Even with an undamaged db it errors out with

      2014-11-15T08:56:29.882-0500	writing repair of test.c to dump/test/c.bson
      2014-11-15T08:56:29.891-0500	repair error: error reading collection: EOF
      

      and mongod aborts with an invariant failure

      2014-11-15T09:00:21.473-0500 I -        [conn1] Invariant failure session->cursorsOut() == 0 src/mongo/db/storage/wiredtiger/wiredtiger_session_cache.cpp 172
      

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Bruce Lucas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: