SERVER-16171: fix repairIterator releasing under WT